---------------------------------------------------------------------------------------------------
Version: 0.69.48
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.47
Date: 2025-06-01
  Changes:
    - Factoriopedia simulations for armored trains fixed.
    - Added test functions for Wube for a bug report.
    - Wind turbines no longer have a dumb useless UI when clicked on... usually!
---------------------------------------------------------------------------------------------------
Version: 0.69.46
Date: 2025-05-31
  Changes:
    - So... don't be mad, but I fixed a bug that made trashsteroid health not scale as much as it needed when you got high physical damage technology... A totally understandable mistake! But on the bright side, I also added difficulty settings under Mod Settings => Map Settings. If your Rubia base starts suddenly exploding, you should use that! Good luck!
    - Difficulty settings added.
---------------------------------------------------------------------------------------------------
Version: 0.69.45
Date: 2025-05-31
  Changes:
    - Compatibility for blueprint shotgun.
    - Marked Krastorio 2 spaced out as an INcompatibility. I made it not crash, but the problem is that it messes with crafting to the point where Rubia is really unplayable. This needs more time dedicated to give specific support, otherwise you just get trapped on the planet.
---------------------------------------------------------------------------------------------------
Version: 0.69.44
Date: 2025-05-31
  Changes:
    - Trashsteroid scale inverting settings can now be changed without rebooting the game. So much more convenient!
    - Module icons for biorecycler no longer obscure other machines. Thanks, Bilka.
    - Difficulty options have been implemented, but not yet available. You will be able to change difficulty once I can properly balance the actual difficulty.